--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,4 +1,8 @@
 .oh-my-zsh/cache/**
 .oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
 
+{{ if ne .chezmoi.os "darwin" }}
+.chezmoiscripts/darwin/**
+{{ end }}
+
 README.md
