--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,3 +1,9 @@
+[".elixir-ls"]
+  type = "archive"
+  url = "https://github.com/elixir-lsp/elixir-ls/archive/master.tar.gz"
+  exact = true
+  stripComponents = 1
+  refreshPeriod = "24h"
 [".vim/autoload/plug.vim"]
   type = "file"
   url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
