--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,3 +1,7 @@
+.elixir-ls/.tool-versions
+.elixir-ls/_build/
+.elixir-ls/deps/
+.elixir-ls/release/
 .oh-my-zsh/cache/**
 .oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
 
