--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -2,11 +2,19 @@
 .elixir-ls/_build/
 .elixir-ls/deps/
 .elixir-ls/release/
+.erlang_ls/.tool-versions
+.erlang_ls/_build/
+.erlang_ls/release/
 .oh-my-zsh/cache/**
 .oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
 
 {{ if ne .chezmoi.os "darwin" }}
 .chezmoiscripts/darwin/**
+Library/Application Support/erlang_ls/
+{{ end }}
+
+{{ if ne .chezmoi.os "linux" }}
+.config/erlang_ls/
 {{ end }}
 
 README.md
