--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -10,10 +10,12 @@
 
 {{ if ne .chezmoi.os "darwin" }}
 .chezmoiscripts/darwin/**
+Library/Application Support/erlang/
 Library/Application Support/erlang_ls/
 {{ end }}
 
 {{ if ne .chezmoi.os "linux" }}
+.config/erlang/
 .config/erlang_ls/
 {{ end }}
 
