--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -10,6 +10,7 @@
 
 {{ if ne .chezmoi.os "darwin" }}
 .chezmoiscripts/darwin/**
+.config/karabiner/
 Library/Application Support/erlang/
 Library/Application Support/erlang_ls/
 Library/Application Support/Sublime Text/
